--- a/KGhome.html
+++ b/KGhome.html
@@ -5,7 +5,9 @@
 <body bgcolor = Gold>
 <h1><center> KG's First Page </center> </h1>
 <p> <center> <img src="Capture.jpeg"> </center>
-<h2> <My Favorites </h2><p>
+<nav>
+ <a href ="MyFavorites.html"> My Favorites </a>
+  </nav>
 Food: Spaghetti <br>
 Sport: <font color = blue> Football </font> <br>
 Color: Red <br>
