--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <nav>
  <a href ="MyFavorites.html"> My Favorites </a>
   </nav>
-<h2> News Flash </h2> <p>
+<a href ="NewsFlash.html"> My Favorites </a>
+  </nav>
+ <h2> News Flash </h2> <p>
 I graduate December 9th, 2023
 <h2> Quote of the Day </h2>
 It's not how you start but how you finish
