--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <nav>
  <a href ="MyFavorites.html"> My Favorites </a>
   </nav>
-<a href ="NewsFlash.html"> My Favorites </a>
+<a href ="NewsFlash.html"> News Flash </a>
   </nav>
  <h2> News Flash </h2> <p>
 I graduate December 9th, 2023
